--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,16 +3,11 @@ layout: default
 ---
 
 <div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
-
-  {{ content }}
-
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <h2 class="post-list-heading">All Posts in {{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
+      {%- if post.tags contains page.name -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -31,10 +26,11 @@ layout: default
             {% endfor %}
         </p>
       </li>
+      {%- endif -%}
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe"><a href="{{ "/feed.xml" | relative_url }}">RSS</a> 구독하기</p>
+    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
