--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -5,7 +5,7 @@
 $base-font-family: "Noto Sans KR", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
-$bold-font-weight: 700 !default;
+$bold-font-weight: 400 !default;
 $light-font-weight: 300 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
@@ -13,7 +13,7 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$background-color: #f4f4f4 !default;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
